ydb/library/yql/tests/postgresql/cases/alter_table.err
<sql-statement>
--
-- ALTER_TABLE
--
-- Clean up in case a prior regression run failed
SET client_min_messages TO 'warning';
</sql-statement>
<sql-statement>
DROP ROLE IF EXISTS regress_alter_table_user1;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 287
    	DROP ROLE IF EXISTS regress_alter_table_user1;
	^
<sql-statement>
RESET client_min_messages;
</sql-statement>
<sql-statement>
CREATE USER regress_alter_table_user1;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 285
    	CREATE USER regress_alter_table_user1;
	^
<sql-statement>
--
-- add attribute
--
CREATE TABLE attmp (initial int4);
</sql-statement>
<sql-statement>
COMMENT ON TABLE attmp_wrong IS 'table comment';
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 258
    	COMMENT ON TABLE attmp_wrong IS 'table comment';
	^
<sql-statement>
COMMENT ON TABLE attmp IS 'table comment';
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 258
    	COMMENT ON TABLE attmp IS 'table comment';
	^
<sql-statement>
COMMENT ON TABLE attmp IS NULL;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 258
    	COMMENT ON TABLE attmp IS NULL;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN xmin integer; -- fails
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN xmin integer; -- fails
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN a int4 default 3;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN a int4 default 3;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN b name;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN b name;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN c text;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN c text;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN d float8;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN d float8;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN e float4;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN e float4;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN f int2;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN f int2;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN g polygon;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN g polygon;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN i char;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN i char;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN k int4;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN k int4;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN l tid;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN l tid;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN m xid;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN m xid;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN n oidvector;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN n oidvector;
	^
<sql-statement>
--ALTER TABLE attmp ADD COLUMN o lock;
ALTER TABLE attmp ADD COLUMN p boolean;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	--ALTER TABLE attmp ADD COLUMN o lock;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN q point;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN q point;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN r lseg;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN r lseg;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN s path;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN s path;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN t box;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN t box;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN v timestamp;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN v timestamp;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN w interval;
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN w interval;
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN x float8[];
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN x float8[];
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN y float4[];
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN y float4[];
	^
<sql-statement>
ALTER TABLE attmp ADD COLUMN z int2[];
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: RawStmt: alternative is not implemented yet : 244
    	ALTER TABLE attmp ADD COLUMN z int2[];
	^
<sql-statement>
INSERT INTO attmp (a, b, c, d, e, f, g,    i,    k, l, m, n, p, q, r, s, t,
	v, w, x, y, z)
   VALUES (4, 'name', 'text', 4.1, 4.1, 2, '(4.1,4.1,3.1,3.1)',
	'c',
	314159, '(1,1)', '512',
	'1 2 3 4 5 6 7 8', true, '(1.1,1.1)', '(4.1,4.1,3.1,3.1)',
	'(0,2,4.1,4.1,3.1,3.1)', '(4.1,4.1,3.1,3.1)',
	'epoch', '01:00:10', '{1.0,2.0,3.0,4.0}', '{1.0,2.0,3.0,4.0}', '{1,2,3,4}');
</sql-statement>
<sql-statement>
SELECT * FROM attmp;
</sql-statement>
BackTrace(void**, unsigned long)+29 (0x14033ECD)
TBackTrace::Capture()+30 (0x1403443E)
TWithBackTrace<yexception>::TWithBackTrace<>()+72 (0x13FD0568)
NYT::TNode::TTypeError::TTypeError()+25 (0x144DC3E9)
NYT::TNode::CheckType(NYT::TNode::EType) const+267 (0x144DD9BB)
NYT::TNode::AsString() const+30 (0x144DC53E)
WriteTableToStream(IOutputStream&, TVector<NYT::TNode, std::__y1::allocator<NYT::TNode> > const&, TVector<NYT::TNode, std::__y1::allocator<NYT::TNode> > const&)+830 (0x13EBBB7E)
Main(int, char**)+5748 (0x13EC0FB4)
main+273 (0x13EC2761)
??+0 (0x7F12C4229D90)
__libc_start_main+128 (0x7F12C4229E40)
??+0 (0x13E4C029)

(NYT::TNode::TTypeError) library/cpp/yson/node/node.cpp:829: TNode type string_node expected, actual type null
